# latent-slot-diffusion

./: pyproject.toml  train_lsd.py
.dvc/: config
checkpoints/: .gitignore  clevr.tar.gz.dvc  clevrtex.tar.gz.dvc  coco.tar.gz.dvc  movi_e.tar.gz.dvc
lsd/eval/: eval.py  eval_stable_lsd_generation.py
lsd/models/: slot_attn.py  unet_with_pos.py
src/data/: dataset.py
