[project]
name = "lsd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.4.0",
    "diffusers==0.28.0",
    "distinctipy>=1.3.4",
    "einops>=0.8.1",
    "huggingface-hub==0.25.0",
    "matplotlib>=3.10.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.48.3",
    "xformers>=0.0.29.post3",
]
